static/css/style.css
/* Main Background colour #1A0035 . Main Text colour #EFD690*/
/* Title font font-family: 'Cinzel', serif;
   Main text font font-family: 'Rubik', sans-serif; */

@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@800&family=Rubik:wght@300&display=swap');

/* Base page colouring */

.main-style {
    background-color: #1A0035;
    color: #EFD690;
}

/* Nav Bar Styling */

.bg-navi {
    background-color: #EFD690;
    color: #1A0035;
    font-family: 'Cinzel', serif;
}

.nav-link {
    color: #1A0035;
}

.active {
    color: black;
    text-decoration: underline;
    font-weight: bold;
}

/* Footing styling */
footer {
    position: sticky;
    bottom: 0;
    width: 100%;
    height: 30px;
    border: 3px solid #1A0035;
}

.foot {
    display: inline-flex;
    width: 100%;
    margin-bottom: 0px;
    justify-content: space-around;
    flex-wrap: wrap;
    background-color: #1A0035;
    color: #EFD690;
}

.foot > li {
    list-style-type: none;
}

.foot > li > a {
    padding-left: 5px;
    padding-right: 5px;
    text-decoration: none;
    color: #EFD690;
}

/* Bootstrap form overrides */

.btn {
    color: red;
}

.pagination {
    margin: 0;
}

